--- a/Chessboard.html
+++ b/Chessboard.html
@@ -8,87 +8,79 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="mainbox">
-      <div class="container1">
-        <div class="items1">&#9820;</div>
-        <div class="items1">&#9822;</div>
-        <div class="items1">&#9821;</div>
-        <div class="items1">&#9819;</div>
-        <div class="items1">&#9818;</div>
-        <div class="items1">&#9821;</div>
-        <div class="items1">&#9822;</div>
-        <div class="items1">&#9820;</div>
-      </div>
-      <div class="container2">
-        <div class="items2">&#9823;</div>
-        <div class="items2">&#9823;</div>
-        <div class="items2">&#9823;</div>
-        <div class="items2">&#9823;</div>
-        <div class="items2">&#9823;</div>
-        <div class="items2">&#9823;</div>
-        <div class="items2">&#9823;</div>
-        <div class="items2">&#9823;</div>
-      </div>
-      <div class="container3">
-        <div class="items3"></div>
-        <div class="items3"></div>
-        <div class="items3"></div>
-        <div class="items3"></div>
-        <div class="items3"></div>
-        <div class="items3"></div>
-        <div class="items3"></div>
-        <div class="items3"></div>
-      </div>
-      <div class="container4">
-        <div class="items4"></div>
-        <div class="items4"></div>
-        <div class="items4"></div>
-        <div class="items4"></div>
-        <div class="items4"></div>
-        <div class="items4"></div>
-        <div class="items4"></div>
-        <div class="items4"></div>
-      </div>
-      <div class="container5">
-        <div class="items5"></div>
-        <div class="items5"></div>
-        <div class="items5"></div>
-        <div class="items5"></div>
-        <div class="items5"></div>
-        <div class="items5"></div>
-        <div class="items5"></div>
-        <div class="items5"></div>
-      </div>
-      <div class="container6">
-        <div class="items6"></div>
-        <div class="items6"></div>
-        <div class="items6"></div>
-        <div class="items6"></div>
-        <div class="items6"></div>
-        <div class="items6"></div>
-        <div class="items6"></div>
-        <div class="items6"></div>
-      </div>
-      <div class="container7">
-        <div class="items7">&#9817;</div>
-        <div class="items7">&#9817;</div>
-        <div class="items7">&#9817;</div>
-        <div class="items7">&#9817;</div>
-        <div class="items7">&#9817;</div>
-        <div class="items7">&#9817;</div>
-        <div class="items7">&#9817;</div>
-        <div class="items7">&#9817;</div>
-      </div>
-      <div class="container8">
-        <div class="items8">&#9814;</div>
-        <div class="items8">&#9816;</div>
-        <div class="items8">&#9815;</div>
-        <div class="items8">&#9813;</div>
-        <div class="items8">&#9812;</div>
-        <div class="items8">&#9815;</div>
-        <div class="items8">&#9816;</div>
-        <div class="items8">&#9814;</div>
-      </div>
+    <div class="mainboard">
+      <div class="white">&#9820;</div>
+      <div class="green">&#9822;</div>
+      <div class="white">&#9821;</div>
+      <div class="green">&#9819;</div>
+      <div class="white">&#9818;</div>
+      <div class="green">&#9821;</div>
+      <div class="white">&#9822;</div>
+      <div class="green">&#9820;</div>
+      <!--Row 1-->
+      <div class="green">&#9823;</div>
+      <div class="white">&#9823;</div>
+      <div class="green">&#9823;</div>
+      <div class="white">&#9823;</div>
+      <div class="green">&#9823;</div>
+      <div class="white">&#9823;</div>
+      <div class="green">&#9823;</div>
+      <div class="white">&#9823;</div>
+      <!--Row 2-->
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <!--Row 3-->
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <!--Row 4-->
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <!--Row 5-->
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="green"></div>
+      <div class="white"></div>
+      <!--Row 6-->
+      <div class="white">&#9817;</div>
+      <div class="green">&#9817;</div>
+      <div class="white">&#9817;</div>
+      <div class="green">&#9817;</div>
+      <div class="white">&#9817;</div>
+      <div class="green">&#9817;</div>
+      <div class="white">&#9817;</div>
+      <div class="green">&#9817;</div>
+      <!--Row 7-->
+      <div class="green">&#9814;</div>
+      <div class="white">&#9816;</div>
+      <div class="green">&#9815;</div>
+      <div class="white">&#9813;</div>
+      <div class="green">&#9812;</div>
+      <div class="white">&#9815;</div>
+      <div class="green">&#9816;</div>
+      <div class="white">&#9814;</div>
+      <!--Row 8-->
     </div>
   </body>
 </html>
