--- a/ChessboardGrid.html
+++ b/ChessboardGrid.html
@@ -14,17 +14,17 @@
       <div class="grid__item">&#9821;</div>
       <div class="grid__item">&#9819;</div>
       <div class="grid__item">&#9818;</div>
-      <div class="grid__item">&#9821;</div>
+      <div class="grid__item"><div id="bish1">&#9821;</div></div>
       <div class="grid__item">&#9822;</div>
-      <div class="grid__item">&#9820;</div>
+      <div class="grid__item"><div id="rook1">&#9820;</div></div>
       <div class="grid__item">&#9823;</div>
       <div class="grid__item">&#9823;</div>
       <div class="grid__item">&#9823;</div>
       <div class="grid__item">&#9823;</div>
+      <div class="grid__item"><div id="pawn3">&#9823;</div></div>
       <div class="grid__item">&#9823;</div>
       <div class="grid__item">&#9823;</div>
-      <div class="grid__item">&#9823;</div>
-      <div class="grid__item">&#9823;</div>
+      <div class="grid__item"><div id="pawn1">&#9823;</div></div>
       <div class="grid__item"></div>
       <div class="grid__item"></div>
       <div class="grid__item"></div>
@@ -57,13 +57,13 @@
       <div class="grid__item"></div>
       <div class="grid__item"></div>
       <div class="grid__item"></div>
+      <div class="grid__item"><div id="pawn2">&#9817;</div></div>
       <div class="grid__item">&#9817;</div>
       <div class="grid__item">&#9817;</div>
       <div class="grid__item">&#9817;</div>
       <div class="grid__item">&#9817;</div>
       <div class="grid__item">&#9817;</div>
-      <div class="grid__item">&#9817;</div>
-      <div class="grid__item">&#9817;</div>
+      <div class="grid__item"><div id="pawn4"><div id="pawneat">&#9817;</div></div></div>
       <div class="grid__item">&#9817;</div>
       <div class="grid__item">&#9814;</div>
       <div class="grid__item">&#9816;</div>
@@ -71,7 +71,7 @@
       <div class="grid__item">&#9813;</div>
       <div class="grid__item">&#9812;</div>
       <div class="grid__item">&#9815;</div>
-      <div class="grid__item">&#9816;</div>
+      <div class="grid__item"><div id="knight1">&#9816;</div></div>
       <div class="grid__item">&#9814;</div>
     </div>
   </body>
